--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "apollo-link-context": "^1.0.20",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.4",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "subscriptions-transport-ws": "^0.9.19",
