--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_GOOGLE_CLIENT_ID=305220382288-pr7kiac739lmvklmvrdvkm1ha4ctco05.apps.googleusercontent.com
+REACT_APP_CLOUDINARY_URI=https://api.cloudinary.com/v1_1/rommel/image/upload
