--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql-tag": "^2.12.4",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
