--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "subscriptions-transport-ws": "^0.9.19",
-    "web-vitals": "^1.0.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
@@ -55,6 +54,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36"
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.2"
   }
 }
